--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,8 @@ python:
   - "3.6"
 
 # Command to run tests
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get build-dep -qq python-pygame
-  - sudo apt-get install -qq python-pygame
+install:
+  - pip3 install pygame
 script:
   - python -m pytest
 virtualenv:
